Fix text align center at thumbnails

--- a/styles/text.css
+++ b/styles/text.css
@@ -22,6 +22,10 @@
     font-weight: bold;
 }
 
+.align-center {
+    text-align: center;
+}
+
 .center {
     display: flex;
     justify-content: center; /* align horizontal */
